--- a/VS2010/Gianfratti.com/Teste/web.config
+++ b/VS2010/Gianfratti.com/Teste/web.config
@@ -8,9 +8,22 @@
     \Windows\Microsoft.Net\Framework\v2.x\Config 
 -->
 <configuration>
+
+  <configSections>
+    <section name="extnet" type="Ext.Net.GlobalConfig" requirePermission="false" />
+  </configSections>
+  
 	<appSettings/>
 	<connectionStrings/>
 	<system.web>
+
+    <httpHandlers>
+      <add path="*/ext.axd" verb="*" type="Ext.Net.ResourceHandler" validate="false" />
+    </httpHandlers>
+    <httpModules>
+      <add name="DirectRequestModule" type="Ext.Net.DirectRequestModule, Ext.Net" />
+    </httpModules>
+    
 		<!-- 
             Set compilation debug="true" to insert debugging 
             symbols into the compiled page. Because this 
@@ -42,4 +55,28 @@
         The system.webServer section is required for running ASP.NET AJAX under Internet
         Information Services 7.0.  It is not necessary for previous version of IIS.
     -->
+  <!-- 
+		The system.webServer section is required for running ASP.NET AJAX under Internet Information Services 7.0.
+		It is not necessary for previous version of IIS.
+	-->
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false"/>
+    <modules>
+      <add
+				name="DirectRequestModule"
+				preCondition="managedHandler"
+				type="Ext.Net.DirectRequestModule, Ext.Net"
+				/>
+    </modules>
+    <handlers>
+      <add
+				name="DirectRequestHandler"
+				verb="*"
+				path="*/ext.axd"
+				preCondition="integratedMode"
+				type="Ext.Net.ResourceHandler"
+				/>
+    </handlers>
+  </system.webServer>
+  
 </configuration>
