--- a/VS2010/Cloud/WebSites/Cloud/Cloud.csproj
+++ b/VS2010/Cloud/WebSites/Cloud/Cloud.csproj
@@ -32,15 +32,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ext.Net">
-      <HintPath>..\..\..\Gianfratti.com\Teste\Bin\Ext.Net.dll</HintPath>
+    <Reference Include="Ext.Net, Version=1.0.3960.36328, Culture=neutral, PublicKeyToken=2e12ce3d0176cd87, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Users\fmanes\Desktop\ext.net.pro.1.0rc1.full.source\ext.net.pro.1.0rc1 - Cópia\Ext.Net\bin\Debug\Ext.Net.dll</HintPath>
     </Reference>
-    <Reference Include="Ext.Net.Utilities">
-      <HintPath>..\..\..\Gianfratti.com\Teste\Bin\Ext.Net.Utilities.dll</HintPath>
+    <Reference Include="Ext.Net.Utilities, Version=1.0.0.36286, Culture=neutral, PublicKeyToken=2c34ac34702a3c23, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Users\fmanes\Desktop\ext.net.pro.1.0rc1.full.source\ext.net.pro.1.0rc1 - Cópia\Ext.Net\bin\Debug\Ext.Net.Utilities.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\..\Gianfratti.com\Teste\Bin\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=3.5.0.0, Culture=neutral, PublicKeyToken=b9a188c8922137c6, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Users\fmanes\Desktop\ext.net.pro.1.0rc1.full.source\ext.net.pro.1.0rc1 - Cópia\Ext.Net\bin\Debug\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -59,6 +62,49 @@
     <Reference Include="System.Web.ApplicationServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Aplicacoes\Feed_Viewer\config.xml" />
+    <Content Include="Aplicacoes\Feed_Viewer\Default.aspx" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\feed-viewer.css" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\FeedViewer.js" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\ajax-loader.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\article.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\bg.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\bullet.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\cancel.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\cmp-bg.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\comment-bg.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\delete.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\details.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\feed-item.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\forward.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\go-to-post.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\grid-hrow.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\header-bar.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\header.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\myfeeds.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\new_tab.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\new_window.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\post-bg.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\post.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\preview-bottom.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\preview-hide.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\preview-right.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\preview.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\refresh.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\rss.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\rss_add.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\rss_delete.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\rss_load.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\signin.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\signout.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\suggested.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\tab-close-on.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\tab-close.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\tabs.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\toolbar.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\wait.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\warning.gif" />
+    <Content Include="Aplicacoes\Feed_Viewer\resources\images\win-bg.gif" />
     <Content Include="bin\Cloud.dll" />
     <Content Include="bin\Cloud.pdb" />
     <Content Include="Designer\Imagens\desktop.jpg" />
@@ -81,6 +127,18 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Aplicacoes\Feed_Viewer\Classes\Logic\FeedGrid.cs" />
+    <Compile Include="Aplicacoes\Feed_Viewer\Classes\Logic\FeedTree.cs" />
+    <Compile Include="Aplicacoes\Feed_Viewer\Classes\Logic\FeedWindow.cs" />
+    <Compile Include="Aplicacoes\Feed_Viewer\Classes\Logic\MainPanel.cs" />
+    <Compile Include="Aplicacoes\Feed_Viewer\Classes\UI\FeedGrid.cs" />
+    <Compile Include="Aplicacoes\Feed_Viewer\Classes\UI\FeedTree.cs" />
+    <Compile Include="Aplicacoes\Feed_Viewer\Classes\UI\FeedViewPort.cs" />
+    <Compile Include="Aplicacoes\Feed_Viewer\Classes\UI\FeedWindow.cs" />
+    <Compile Include="Aplicacoes\Feed_Viewer\Classes\UI\MainPanel.cs" />
+    <Compile Include="Aplicacoes\Feed_Viewer\FeedProxy.ashx.cs">
+      <DependentUpon>FeedProxy.ashx</DependentUpon>
+    </Compile>
     <Compile Include="DeskTop.aspx.cs">
       <DependentUpon>DeskTop.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -96,6 +154,9 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Designer\Templates\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Aplicacoes\Feed_Viewer\FeedProxy.ashx" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
