--- a/VS2010/Cloud/WebSites/Cloud/Web.config
+++ b/VS2010/Cloud/WebSites/Cloud/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!-- 
     Note: As an alternative to hand editing this file you can use the 
     web admin tool to configure settings for your application. Use
@@ -13,8 +13,8 @@
     <section name="extnet" type="Ext.Net.GlobalConfig" requirePermission="false" />
   </configSections>
   
-	<appSettings/>
-	<connectionStrings/>
+	<appSettings />
+	<connectionStrings />
 	<system.web>
 
     <httpHandlers>
@@ -24,7 +24,7 @@
       <add name="DirectRequestModule" type="Ext.Net.DirectRequestModule, Ext.Net" />
     </httpModules>
 
-    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
+    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID" />
     
 		<!-- 
             Set compilation debug="true" to insert debugging 
@@ -39,7 +39,7 @@
             of the security authentication mode used by 
             ASP.NET to identify an incoming user. 
         -->
-		<authentication mode="Windows"/>
+		<authentication mode="Windows" />
 		<!--
             The <customErrors> section enables configuration 
             of what to do if/when an unhandled error occurs 
@@ -62,23 +62,14 @@
 		It is not necessary for previous version of IIS.
 	-->
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
+    <validation validateIntegratedModeConfiguration="false" />
     <modules>
-      <add
-				name="DirectRequestModule"
-				preCondition="managedHandler"
-				type="Ext.Net.DirectRequestModule, Ext.Net"
-				/>
+      <add name="DirectRequestModule" preCondition="managedHandler" type="Ext.Net.DirectRequestModule, Ext.Net" />
     </modules>
     <handlers>
-      <add
-				name="DirectRequestHandler"
-				verb="*"
-				path="*/ext.axd"
-				preCondition="integratedMode"
-				type="Ext.Net.ResourceHandler"
-				/>
+      <add name="DirectRequestHandler" verb="*" path="*/ext.axd" preCondition="integratedMode" type="Ext.Net.ResourceHandler" />
     </handlers>
+        <directoryBrowse enabled="true" />
   </system.webServer>
   
 </configuration>
