--- a/VS2010/Cloud/WebSites/Cloud/Cloud.csproj
+++ b/VS2010/Cloud/WebSites/Cloud/Cloud.csproj
@@ -113,6 +113,7 @@
     <Content Include="Designer\Imagens\vista_start_button.gif" />
     <Content Include="Designer\Imagens\window48x48.png" />
     <Content Include="DeskTop.aspx" />
+    <Content Include="Login.aspx" />
     <Content Include="Styles\Site.css" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\jquery-1.4.1-vsdoc.js" />
@@ -149,6 +150,13 @@
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
