--- a/VS2010/Cloud/WebSites/Cloud/Web.config
+++ b/VS2010/Cloud/WebSites/Cloud/Web.config
@@ -39,7 +39,14 @@
             of the security authentication mode used by 
             ASP.NET to identify an incoming user. 
         -->
-		<authentication mode="Windows" />
+    <!--Caso problema com Cookie usar a propriedade cookieless="UseUri" que o cookie é criado na URL-->
+    <authentication mode="Forms">
+      <forms name="CookieCloud" loginUrl="Login.aspx" protection="All" path="/" />
+    </authentication>
+    <authorization>
+      <deny users="?" />
+    </authorization>
+		<!--<authentication mode="Windows" />-->
 		<!--
             The <customErrors> section enables configuration 
             of what to do if/when an unhandled error occurs 
