--- a/VS2010/Cloud/WebSites/Cloud/Web.config
+++ b/VS2010/Cloud/WebSites/Cloud/Web.config
@@ -14,9 +14,21 @@
   </configSections>
   
 	<appSettings />
-	<connectionStrings />
-	<system.web>
 
+  <connectionStrings>
+    <add
+        name="NorthwindConnectionString"
+        connectionString="Data Source=lilac.arvixe.com;Initial Catalog=Northwind;User ID=extnet_demo;Password=extnet_demo;"
+        providerName="System.Data.SqlClient"
+		    />
+    <add
+        name="SimpleTasksConnectionString"
+        connectionString="Data Source=lilac.arvixe.com;Initial Catalog=SimpleTasks;User ID=extnet_demo;Password=extnet_demo;"
+        providerName="System.Data.SqlClient"
+		    />
+  </connectionStrings>
+  
+	<system.web>    
     <httpHandlers>
       <add path="*/ext.axd" verb="*" type="Ext.Net.ResourceHandler" validate="false" />
     </httpHandlers>
@@ -41,7 +53,7 @@
         -->
     <!--Caso problema com Cookie usar a propriedade cookieless="UseUri" que o cookie é criado na URL-->
     <authentication mode="Forms">
-      <forms name="CookieCloud" loginUrl="Login.aspx" protection="All" path="/" />
+      <forms name="CookieCloud" loginUrl="Aplicacoes/Autenticar/Default.aspx" protection="All" path="/" />
     </authentication>
     <authorization>
       <deny users="?" />
