--- a/VS2010/Stiper/Admin/web.config
+++ b/VS2010/Stiper/Admin/web.config
@@ -9,9 +9,13 @@
 	</connectionStrings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.0"/>
-		<authentication mode="Forms">
-			<forms loginUrl="~/Account/Login.aspx" timeout="2880"/>
-		</authentication>
+    <!--Caso problema com Cookie usar a propriedade cookieless="UseUri" que o cookie é criado na URL-->
+    <authentication mode="Forms">
+      <forms name="CookieCloud" loginUrl="~/Account/Login.aspx" protection="All" path="/" />
+    </authentication>
+    <!--<authorization>
+      <deny users="?" />
+    </authorization>-->
 		<membership>
 			<providers>
 				<clear/>
