--- a/VS2010/Stiper/Admin/web.config
+++ b/VS2010/Stiper/Admin/web.config
@@ -5,15 +5,39 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
-	</connectionStrings>
+		<!--<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />
+    <add name="ModelContainer" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mysql.nrserver7.net;User Id=gianfratti;Persist Security Info=True;database=gianfratti&quot;" providerName="System.Data.EntityClient" />-->
+		
+    <!--Local-->
+    <!--<add name="stiperEntities" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;User Id=root;password=manes2000; Persist Security Info=True;database=stiper&quot;" providerName="System.Data.EntityClient"/>-->
+    <!--Gianfratti.com-->
+    <add name="stiperEntities" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mysql.nrserver7.net;User Id=gianfratti; password=manes2000; Persist Security Info=True;database=gianfratti&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  
+  <system.data>
+    <DbProviderFactories>
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.3.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
+    </DbProviderFactories>
+  </system.data>
+  
 	<system.web>
-		<compilation debug="true" targetFramework="4.0"/>
-    <!--Caso problema com Cookie usar a propriedade cookieless="UseUri" que o cookie é criado na URL-->
-    <authentication mode="Forms">
-      <forms name="CookieCloud" loginUrl="~/Account/Login.aspx" protection="All" path="/" />
-    </authentication>
-    <!--<authorization>
+		<compilation debug="true" targetFramework="4.0">
+			<assemblies>
+				<add assembly="System.Security, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+				<add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+				<add assembly="System.Data.Entity.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+				<add assembly="MySql.Data, Version=6.3.6.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D"/>
+				<add assembly="MySql.Data.Entity, Version=6.3.6.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D"/>
+				<add assembly="MySql.Web, Version=6.3.6.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D"/></assemblies>
+			<buildProviders>
+				<add extension=".edmx" type="System.Data.Entity.Design.AspNet.EntityDesignerBuildProvider"/>
+			</buildProviders>
+		</compilation>
+		<!--Caso problema com Cookie usar a propriedade cookieless="UseUri" que o cookie é criado na URL-->
+		<authentication mode="Forms">
+			<forms name="CookieCloud" loginUrl="~/Account/Login.aspx" protection="All" path="/"/>
+		</authentication>
+		<!--<authorization>
       <deny users="?" />
     </authorization>-->
 		<membership>
@@ -35,7 +59,9 @@
 				<add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/"/>
 			</providers>
 		</roleManager>
-	</system.web>
+    <customErrors mode="Off"/>
+
+  </system.web>
 	<system.webServer>
 		<modules runAllManagedModulesForAllRequests="true"/>
 	</system.webServer>
