--- a/VS2010/Stiper/Admin/web.config
+++ b/VS2010/Stiper/Admin/web.config
@@ -4,65 +4,64 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-	<connectionStrings>
-		<!--<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />
-    <add name="ModelContainer" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mysql.nrserver7.net;User Id=gianfratti;Persist Security Info=True;database=gianfratti&quot;" providerName="System.Data.EntityClient" />-->
-		
+  <connectionStrings>
     <!--Local-->
-    <!--<add name="stiperEntities" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;User Id=root;password=manes2000; Persist Security Info=True;database=stiper&quot;" providerName="System.Data.EntityClient"/>-->
+    <add name="Entidades" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;User Id=root;password=manes2000; Persist Security Info=True;database=stiper&quot;" providerName="System.Data.EntityClient"/>
     <!--Gianfratti.com-->
-    <add name="stiperEntities" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mysql.nrserver7.net;User Id=gianfratti; password=manes2000; Persist Security Info=True;database=gianfratti&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="Entidades" connectionString="metadata=res://*/App_Code.Model.csdl|res://*/App_Code.Model.ssdl|res://*/App_Code.Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=mysql.nrserver7.net;User Id=gianfratti; password=manes2000; Persist Security Info=True;database=gianfratti&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   
+  <!--Atenção as vezes pode dar conflito om a caeve abaixo "MySQL Data Provider" caso foi instalado o conector na maquina local -->
+  <!--Se isso acontecer deve-se abrir o caminho C:\Windows\Microsoft.NET\Framework\v4.0.30319\Config editar o arquivo machine.config e comentar a chave "MySQL Data Provider"  -->
   <system.data>
     <DbProviderFactories>
-      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.3.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.3.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
   </system.data>
   
 	<system.web>
 		<compilation debug="true" targetFramework="4.0">
 			<assemblies>
-				<add assembly="System.Security, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
-				<add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-				<add assembly="System.Data.Entity.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
-				<add assembly="MySql.Data, Version=6.3.6.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D"/>
-				<add assembly="MySql.Data.Entity, Version=6.3.6.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D"/>
-				<add assembly="MySql.Web, Version=6.3.6.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D"/></assemblies>
+				<add assembly="System.Security, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
+				<add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
+				<add assembly="System.Data.Entity.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
+				<add assembly="MySql.Data, Version=6.3.6.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D" />
+				<add assembly="MySql.Data.Entity, Version=6.3.6.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D" />
+				<add assembly="MySql.Web, Version=6.3.6.0, Culture=neutral, PublicKeyToken=C5687FC88969C44D" /></assemblies>
 			<buildProviders>
-				<add extension=".edmx" type="System.Data.Entity.Design.AspNet.EntityDesignerBuildProvider"/>
+				<add extension=".edmx" type="System.Data.Entity.Design.AspNet.EntityDesignerBuildProvider" />
 			</buildProviders>
 		</compilation>
 		<!--Caso problema com Cookie usar a propriedade cookieless="UseUri" que o cookie é criado na URL-->
 		<authentication mode="Forms">
-			<forms name="CookieCloud" loginUrl="~/Account/Login.aspx" protection="All" path="/"/>
+			<forms name="CookieCloud" loginUrl="~/Account/Login.aspx" protection="All" path="/" />
 		</authentication>
 		<!--<authorization>
       <deny users="?" />
     </authorization>-->
 		<membership>
 			<providers>
-				<clear/>
-				<add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/"/>
+				<clear />
+				<add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
 			</providers>
 		</membership>
 		<profile>
 			<providers>
-				<clear/>
-				<add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/"/>
+				<clear />
+				<add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider" connectionStringName="ApplicationServices" applicationName="/" />
 			</providers>
 		</profile>
 		<roleManager enabled="false">
 			<providers>
-				<clear/>
-				<add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/"/>
-				<add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/"/>
+				<clear />
+				<add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="ApplicationServices" applicationName="/" />
+				<add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/" />
 			</providers>
 		</roleManager>
-    <customErrors mode="Off"/>
+    <customErrors mode="Off" />
 
   </system.web>
 	<system.webServer>
-		<modules runAllManagedModulesForAllRequests="true"/>
+		<modules runAllManagedModulesForAllRequests="true" />
 	</system.webServer>
 </configuration>
